[tool.poetry]
name = "integrating-linkedin-messages"
version = "0.1.0"
description = ""
authors = ["ngustavin <contact.gustaf@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
linkedin-api = "~=2.0.0a"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
